kubernetes/apps/automation/zwave/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websocket
      port: 3000
      targetPort: 3000
      protocol: TCP
