kubernetes/apps/automation/zwave/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: zwave.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - zwave.unscfleet.com
  rules:
    - backendRefs:
        - name: zwave
          port: 80
